Update authentication filters