@@ -1,6 +1,7 @@
 package com.company.payroll.controller.api;
 
 import java.io.IOException;
+import java.lang.reflect.Array;
 import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
@@ -14,16 +15,21 @@ import org.springframework.core.io.Resource;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RequestPart;
 import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.company.payroll.model.Account;
+import com.company.payroll.model.FileAttachment;
 import com.company.payroll.service.AccountService;
+import com.company.payroll.service.FileAttachmentService;
 import com.company.payroll.utils.FileUtils;
 import com.company.payroll.utils.JwtTokenUtils;
 
@@ -42,12 +48,15 @@ public class FileController {
 	@Autowired
 	private AccountService accountService;
 	
+	@Autowired
+	private FileAttachmentService fileAttachmentService;
+	
 	public FileController(FileUtils fileUtils, JwtTokenUtils jwtTokenUtils) {
 		this.fileUtils = fileUtils;
 		this.jwtTokenUtils = jwtTokenUtils;
 	}
     
-    @PostMapping("/image/upload")
+    @PostMapping("/upload/image")
     public ResponseEntity<Integer> uploadImage(@RequestParam("file") MultipartFile file, HttpServletRequest request) {
     	Integer status = 0;
     	String header = request.getHeader("Authorization");
@@ -55,7 +64,7 @@ public class FileController {
     	Claims claims = jwtTokenUtils.getClaims(token);
     	
     	LocalDate date = LocalDate.now();
-    	String imgpath = "/images/" + claims.get("username") + "/" + date.getYear() 
+    	String imgpath = "/images/" + claims.getSubject()+ "/" + date.getYear() 
     				   + "/" + date.getMonthValue() + "/" + date.getDayOfMonth();
     	String contentType = file.getContentType();
     	
@@ -63,7 +72,7 @@ public class FileController {
     		String uploadPath = fileUtils.imageUpload(file, imgpath);
     		if(!uploadPath.equals("")) {
     			Account account = new Account();
-    			account.setUsername(claims.get("username").toString());
+    			account.setUsername(claims.getSubject());
     			account.setImgPath(uploadPath);
     			account.setDateModified(LocalDateTime.now());
     			
@@ -79,14 +88,14 @@ public class FileController {
     	return ResponseEntity.ok(status);
     }
 
-    @GetMapping("/image/download")
+    @GetMapping("/download/image")
     public ResponseEntity<Resource> downloadImage(HttpServletRequest request) {
     	String header = request.getHeader("Authorization");
     	String token = header.substring(7);
     	Claims claims = jwtTokenUtils.getClaims(token);
     	Account account = accountService.getByUsername(claims.get("username").toString());
     	
-        Resource resource = fileUtils.imageDownload(Paths.get(account.getImgPath()));
+        Resource resource = fileUtils.download(Paths.get(account.getImgPath()));
 
         String contentType = null;
         try {
@@ -101,8 +110,65 @@ public class FileController {
         return ResponseEntity.ok().contentType(MediaType.parseMediaType(contentType)).body(resource);
     }
 
-//  @PostMapping("/image/upload/multiple")
-//  public List<ProfileImage> uploadMultipleFiles(@RequestParam("files") MultipartFile[] files, @PathVariable("id")int sapid) {
-//      return Arrays.asList(files).stream().map(file -> uploadAvatar(file, sapid)).collect(Collectors.toList());
-//  }
+	@PostMapping(value = "/upload/documents/employee/{id}")
+	public ResponseEntity<Integer> uploadEmployeeFiles(@RequestPart("files") MultipartFile[] files, @PathVariable("id") int id) {
+		String filepath = "/files/employees/" + String.valueOf(id);
+
+		FileAttachment obj = new FileAttachment();
+      
+		List<MultipartFile> fileList = Arrays.asList(files).stream().toList();
+	  
+		for(MultipartFile file : fileList) {
+			String path = fileUtils.fileUpload(file, filepath);
+		  
+			obj.setFileName(file.getOriginalFilename());
+			obj.setFileSize(file.getSize());
+			obj.setAttachmentPath(path);
+			obj.setEId(id);
+		  
+			fileAttachmentService.insert(obj);
+		}
+      
+		return ResponseEntity.ok(1);
+	}
+  
+	@PostMapping("/upload/documents/manager/{id}")
+	public ResponseEntity<Integer> uploadManagerFiles(@RequestParam("files") MultipartFile[] files, @PathVariable("id") int id) {
+		String filepath = "/files/manager/" + String.valueOf(id);
+	  
+		FileAttachment obj = new FileAttachment();
+      
+     	List<MultipartFile> fileList = Arrays.asList(files).stream().toList();
+	  
+     	for(MultipartFile file : fileList) {
+			String path = fileUtils.fileUpload(file, filepath);
+		  
+			obj.setFileName(file.getOriginalFilename());
+			obj.setFileSize(file.getSize());
+			obj.setAttachmentPath(path);
+			obj.setMId(id);
+		  
+			fileAttachmentService.insert(obj);
+     	}
+      
+     	return ResponseEntity.ok(1);
+	}
+	
+	@DeleteMapping("/documents/delete/{id}")
+	public ResponseEntity<Integer> deleteFile(@PathVariable("id") int id) {
+		FileAttachment obj = fileAttachmentService.getByPrimaryKey(id);
+		Integer status = fileAttachmentService.delete(obj.getFId());
+		
+		if(status ==0) {
+			return ResponseEntity.status(HttpStatus.FORBIDDEN).body(0);
+		} else {
+			boolean bool = fileUtils.delete(Paths.get(obj.getAttachmentPath()));
+			
+			if(!bool) {
+				return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR).body(0);
+			}
+		}
+
+		return ResponseEntity.ok(1);
+	}
 }
